--- a/src/scss/utils/button.scss
+++ b/src/scss/utils/button.scss
@@ -81,7 +81,6 @@ a.btn {
 .animated-button {
   position: relative;
   overflow: hidden;
-  height: 54px;
   padding: 7px 20px;
   border-radius: 12px;
   border: 4px solid #8D00FF;
@@ -95,7 +94,6 @@ a.btn {
   transition: all 0.3s ease;
   text-decoration: none;
   z-index: 1;
-  max-height: 56px;
   overflow: hidden;
   box-sizing: border-box;
   font-family: $secondaryFontFamily;
